# evremap

./: .gitignore  Cargo.toml  LICENSE.md  README.md  default.nix  evremap.service  flake.nix  module.nix  pixelbookgo.toml
.github/workflows/: rust.yml
nix/: module.nix  overlays.nix
src/: deviceinfo.rs  main.rs  mapping.rs  remapper.rs
