[package]
name = "evremap"
version = "0.1.0"
authors = ["Wez Furlong"]
edition = "2018"

[dependencies]
evdev-rs = "0.3"
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.3"
structopt = "0.3"
serde = { version="1.0", features=["derive"]}
thiserror = "1.0"
toml = "0.5"
libc = "0.2"
float_duration = "0.3.3"
